feat(prism): 补上缺失的语言

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,12 +16,16 @@ src/global/zh/MediaWiki:GHIAHistory.json linguist-generated=true
 # From prefetch
 src/gadgets/libJSON5/MediaWiki:Gadget-libJSON5.js linguist-generated=true
 src/gadgets/localforage/MediaWiki:Gadget-localforage.js linguist-generated=true
-src/gadgets/prism-language-javascript/MediaWiki:Gadget-prism-language-clike.js linguist-generated=true
 src/gadgets/prism-core/MediaWiki:Gadget-prism-core.js linguist-generated=true
 src/gadgets/prism-core/MediaWiki:Gadget-prism-line-numbers.js linguist-generated=true
 src/gadgets/prism-core/MediaWiki:Gadget-prism-line-numbers.css linguist-generated=true
+src/gadgets/prism-language-bash/MediaWiki:Gadget-prism-language-bash.js linguist-generated=true
+src/gadgets/prism-language-c/MediaWiki:Gadget-prism-language-c.js linguist-generated=true
+src/gadgets/prism-language-clike/MediaWiki:Gadget-prism-language-clike.js linguist-generated=true
+src/gadgets/prism-language-coffeescript/MediaWiki:Gadget-prism-language-coffeescript.js linguist-generated=true
 src/gadgets/prism-language-css/MediaWiki:Gadget-prism-language-css.js linguist-generated=true
 src/gadgets/prism-language-css/MediaWiki:Gadget-prism-language-css-extras.js linguist-generated=true
+src/gadgets/prism-language-java/MediaWiki:Gadget-prism-language-java.js linguist-generated=true
 src/gadgets/prism-language-javascript/MediaWiki:Gadget-prism-language-javascript.js linguist-generated=true
 src/gadgets/prism-language-javascript/MediaWiki:Gadget-prism-language-javascript-extras.js linguist-generated=true
 src/gadgets/prism-language-json/MediaWiki:Gadget-prism-language-json.js linguist-generated=true
@@ -29,10 +33,13 @@ src/gadgets/prism-language-json/MediaWiki:Gadget-prism-language-json5.js linguis
 src/gadgets/prism-language-latex/MediaWiki:Gadget-prism-language-latex.js linguist-generated=true
 src/gadgets/prism-language-lua/MediaWiki:Gadget-prism-language-lua.js linguist-generated=true
 src/gadgets/prism-language-markup/MediaWiki:Gadget-prism-language-markup.js linguist-generated=true
+src/gadgets/prism-language-perl/MediaWiki:Gadget-prism-language-perl.js linguist-generated=true
 src/gadgets/prism-language-php/MediaWiki:Gadget-prism-language-markup-templating.js linguist-generated=true
 src/gadgets/prism-language-php/MediaWiki:Gadget-prism-language-php.js linguist-generated=true
 src/gadgets/prism-language-php/MediaWiki:Gadget-prism-language-php-extras.js linguist-generated=true
+src/gadgets/prism-language-python/MediaWiki:Gadget-prism-language-python.js linguist-generated=true
 src/gadgets/prism-language-regex/MediaWiki:Gadget-prism-language-regex.js linguist-generated=true
+src/gadgets/prism-language-ruby/MediaWiki:Gadget-prism-language-ruby.js linguist-generated=true
 src/gadgets/prism-language-typescript/MediaWiki:Gadget-prism-language-typescript.js linguist-generated=true
 src/gadgets/prism-language-yaml/MediaWiki:Gadget-prism-language-yaml.js linguist-generated=true
 src/gadgets/prism-plugin-javadoclike/MediaWiki:Gadget-prism-plugin-javadoclike.js linguist-generated=true
