--- a/src/gadgets/prism-language-csharp/definition.yaml
+++ b/src/gadgets/prism-language-csharp/definition.yaml
@@ -23,6 +23,7 @@ peers: []
 
 dependencies:
   - ext.gadget.prism-core
+  - ext.gadget.prism-language-clike
 
 _sites:
   - zh
@@ -31,4 +32,4 @@ _sites:
 _section: system
 
 _files:
-  - MediaWiki:Gadget-prism-language-yaml.js
+  - MediaWiki:Gadget-prism-language-csharp.js
