--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "module",
     "private": true,
     "engines": {
-        "node": "^18.17 || ^20.1"
+        "node": "^18.17 || >=20.1"
     },
     "scripts": {
         "test": "eslint src && stylelint src/**/*.css && v8r && node scripts/emailmapChecker/index.js",
