refactor(JSONViewer): 改为从外部cdn调用依赖，实现主体代码保存在本仓库

--- a/src/gadgets/JSONViewer/definition.yaml
+++ b/src/gadgets/JSONViewer/definition.yaml
@@ -20,7 +20,8 @@ rights: []
 
 peers: []
 
-dependencies: []
+dependencies:
+  - mediawiki.api
 
 _sites:
   - zh
@@ -30,3 +31,4 @@ _section: browsing
 
 _files:
   - Gadget-JSONViewer.js
+  - Gadget-JSONViewer.css
