fix: :bug: 依赖调整、标题修复
1.移除失效依赖：mediawiki.legacy.wikibits
2.jQuery UI依赖更换
3.恢复部分html标签和符号在标题的使用

--- a/src/gadgets/UserMessages/definition.yaml
+++ b/src/gadgets/UserMessages/definition.yaml
@@ -25,9 +25,7 @@ peers: []
 dependencies:
   - ext.gadget.site-lib
   - ext.gadget.libUtil
-  - jquery.ui.dialog
-  - jquery.ui.autocomplete
-  - jquery.ui.resizable
+  - jquery.ui
   - mediawiki.util
 
 _sites:
