--- a/src/gadgets/noteTA/definition.yaml
+++ b/src/gadgets/noteTA/definition.yaml
@@ -25,7 +25,7 @@ dependencies:
   - ext.gadget.site-lib
   - jquery.makeCollapsible
   - mediawiki.Uri
-  - jquery.ui.dialog
+  - jquery.ui
 
 _sites:
   - zh
