--- a/src/gadgets/interfaceVariantConverter/definition.yaml
+++ b/src/gadgets/interfaceVariantConverter/definition.yaml
@@ -8,13 +8,16 @@ supportsUrlLoad: false
 
 skins: []
 
-actions: []
+actions:
+  - view
 
 categories: []
 
-namespaces: []
+namespaces: 
+  - "8"
 
-contentModels: []
+contentModels: 
+  - wikitext
 
 type: general
 
