--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
             "ESNext",
             "DOM"
         ],
+        // From https://swc.rs/docs/migrating-from-tsc
+        "isolatedModules": true,
+        "verbatimModuleSyntax": true,
+        "esModuleInterop": true,
+        "useDefineForClassFields": false,
     },
     "include": [
         "src",
