--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "ci": "export RANDOM_UUID=$(uuidgen) && rm -rdf node_modules && node scripts/ci/before.js && npm ci && node scripts/ci/after.js",
         "build": "run-p build:js build:css",
         "build:css": "postcss src/**/*.css --base src/ -d dist/",
-        "build:js": "tsc --project tsconfig.production.json"
+        "build:js": "cd src && npx swc . -d ../dist --only **/*.js"
     },
     "dependencies": {
         "@actions/artifact": "^2.3.2",
