--- a/.swcrc
+++ b/.swcrc
@@ -1,83 +1,6 @@
 {
     "$schema": "https://swc.rs/schema.json",
     "jsc": {
-        "minify": {
-            "compress": {
-                "arguments": false,
-                "arrows": false,
-                "booleans": false,
-                "booleans_as_integers": false,
-                "collapse_vars": false,
-                "comparisons": false,
-                "computed_props": false,
-                "conditionals": false,
-                "dead_code": false,
-                "defaults": false,
-                "directives": false,
-                "drop_console": false,
-                "drop_debugger": false,
-                "ecma": 2017,
-                "evaluate": false,
-                "global_defs": {},
-                "hoist_funs": false,
-                "hoist_props": false,
-                "hoist_vars": false,
-                "if_return": false,
-                "inline": false,
-                "join_vars": false,
-                "keep_classnames": true,
-                "keep_fargs": true,
-                "keep_infinity": true,
-                "loops": false,
-                "negate_iife": false,
-                "passes": 1,
-                "properties": false,
-                "pure_getters": "strict",
-                "pure_funcs": [],
-                "reduce_funcs": false,
-                "reduce_vars": false,
-                "sequences": false,
-                "side_effects": false,
-                "switches": false,
-                "top_retain": null,
-                "toplevel": false,
-                "typeofs": false,
-                "unsafe": false,
-                "unsafe_arrows": false,
-                "unsafe_comps": false,
-                "unsafe_Function": false,
-                "unsafe_math": false,
-                "unsafe_symbols": false,
-                "unsafe_methods": false,
-                "unsafe_proto": false,
-                "unsafe_regexp": false,
-                "unsafe_undefined": false,
-                "unused": false
-            },
-            "mangle": {
-                "asciiOnly": false,
-                "beautify": false,
-                "braces": false,
-                "comments": "all",
-                "ecma": 2017,
-                "indentLevel": 4,
-                "indentStart": 0,
-                "inlineScript": false,
-                "keepNumbers": true,
-                "keepQuotedProps": true,
-                "maxLineLen": false,
-                "preamble": null,
-                "quoteKeys": false,
-                "quoteStyle": 0,
-                "preserveAnnotations": false,
-                "safari10": false,
-                "semicolons": true,
-                "shebang": false,
-                "webkit": false,
-                "wrapIife": false,
-                "wrapFuncArgs": false
-            }
-        },
         "parser": {
             "syntax": "ecmascript",
             "jsx": false,
@@ -98,7 +21,8 @@
         "keepClassNames": true,
         "experimental": {
             "cacheRoot": ".cache/swc"
-        }
+        },
+        "preserveAllComments": false
     },
-    "minify": true
+    "minify": false
 }
