fix: 修正输出目录路径，统一文件夹命名规则

--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -1,7 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "outDir": "./dist/compiled",
+        "outDir": "./dist/_compiled",
         "baseUrl": "./",
         "rootDir": "./src/",
         "target": "es2020",
