fix: :bug: 依赖与小工具加载条件
1.移除失效依赖：mw.notify
2.将部分小工具名字空间、操作判断条件移动到配置文件中

--- a/src/gadgets/widgetPreload/definition.yaml
+++ b/src/gadgets/widgetPreload/definition.yaml
@@ -8,11 +8,13 @@ supportsUrlLoad: false
 
 skins: []
 
-actions: []
+actions:
+  - edit
 
 categories: []
 
-namespaces: []
+namespaces:
+  - "274"
 
 contentModels: []
 
