feat: 添加用户权限模式生成器

--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -119,6 +119,8 @@ jobs:
         run: node scripts/generateGadgetsDefinition/index.js
       - name: Conventional Commits scopes generator
         run: node scripts/generateConventionalCommitsScopes/index.js
+      - name: User Rights Schema generator
+        run: node scripts/generateUserRightsSchema/index.js
       - name: Commits History generator
         run: node scripts/generateCommitsHistory/index.js
       - name: linguist-generated
