--- a/src/gadgets/vector-styles/definition.yaml
+++ b/src/gadgets/vector-styles/definition.yaml
@@ -7,7 +7,7 @@ default: true
 supportsUrlLoad: false
 
 skins:
-  - vector
+  - vector-2022
 
 actions: []
 
@@ -21,7 +21,8 @@ type: styles
 
 package: false
 
-rights: []
+rights:
+  - disabled
 
 peers: []
 
