feat: 添加对讨论工具 DiscussionTools 的支持

--- a/src/gadgets/MarkAsResolved/definition.yaml
+++ b/src/gadgets/MarkAsResolved/definition.yaml
@@ -31,6 +31,7 @@ dependencies:
   - ext.gadget.libPolyfill
   - ext.gadget.libOOUIDialog
   - ext.gadget.site-lib
+  - ext.gadget.libDiscussionUtil
 
 _sites:
   - zh
