fix: 更新设置以禁用全局存储约定式提交作用域

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -175,5 +175,6 @@
         "Group/suppress",
         "Group/sysop",
         "Group/user"
-    ]
+    ],
+    "conventionalCommits.storeScopesGlobally": false
 }
