fix: 文字积压及依赖

--- a/src/gadgets/queryContributions/definition.yaml
+++ b/src/gadgets/queryContributions/definition.yaml
@@ -29,7 +29,7 @@ dependencies:
   - mediawiki.api
   - mediawiki.user
   - jquery.tablesorter
-  - codex-styles
+  - '@wikimedia/codex'
   - ext.gadget.libPolyfill
   - ext.gadget.libCachedCode
 
