--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -43,6 +43,7 @@ jobs:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
         queries: +security-and-quality
+        config-file: .github/codeql-config.yaml
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
