--- a/src/gadgets/inpageedit-next/package.json
+++ b/src/gadgets/inpageedit-next/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "inpageedit-next",
+  "name": "gadget-inpageedit-next",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.20.0",
+  "scripts": {},
   "devDependencies": {
     "@inpageedit/core": "^0.14.3",
     "types-mediawiki": "^2.0.0"
