--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "yaml": "^2.8.1"
     },
     "devDependencies": {
+        "@inpageedit/core": "^0.14.3",
         "npm-run-all2": "^8.0.4",
         "typescript": "^5.7.3"
     }
