--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@annangela/eslint-plugin-prefer-reflect": "^4.0.0",
         "@csstools/postcss-is-pseudo-class": "^6.0.0",
         "@csstools/postcss-media-minmax": "^3.0.0",
+        "@csstools/stylelint-formatter-github": "^2.0.0",
         "@octokit/auth-action": "^6.0.2",
         "@octokit/auth-app": "^8.1.2",
         "@octokit/auth-unauthenticated": "^7.0.3",
@@ -60,7 +61,6 @@
         "semver": "^7.7.3",
         "simple-git": "^3.30.0",
         "stylelint": "^17.0.0",
-        "stylelint-actions-formatters": "^16.3.1",
         "stylelint-config-standard": "^40.0.0",
         "terser": "^5.46.0",
         "types-mediawiki": "^2.0.0",
