feat: 添加站点设置小工具定义支持

--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -16,6 +16,7 @@ on:
       - src/gadgets/Gadgets-definition-list.yaml
       - .github/workflows/postCommit.yaml
       - .vscode/json-schemas/gadget-definition.json
+      - .vscode/json-schemas/gadget-definition-per-site.json
       - .browserslistrc
       - .swcrc
       - .*.yaml
@@ -36,6 +37,7 @@ on:
       - src/gadgets/Gadgets-definition-list.yaml
       - .github/workflows/postCommit.yaml
       - .vscode/json-schemas/gadget-definition.json
+      - .vscode/json-schemas/gadget-definition-per-site.json
       - .browserslistrc
       - .*.yaml
       - package-lock.json
