--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "esmify": "^2.1.1",
         "hash-wasm": "^4.12.0",
         "ip": "^2.0.1",
+        "jsonc-parser": "^3.3.1",
         "localforage": "^1.10.0",
         "postcss": "^8.5.6",
         "postcss-cli": "^11.0.1",
