--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "ci": "export RANDOM_UUID=$(uuidgen) && rm -rdf node_modules && node scripts/ci/before.js && npm ci && node scripts/ci/after.js",
         "build": "run-p build:js build:css",
         "build:css": "postcss src/**/*.css --base src/ -d dist/",
-        "build:js": "rm -rf dist && npx tsc --project tsconfig.production.json",
+        "build:js": "rm -rf dist && npx tsc --project tsconfig.production.json && node scripts/build/index.js",
         "minification:js": "node scripts/minification/terser.js"
     },
     "dependencies": {
@@ -72,6 +72,7 @@
     },
     "devDependencies": {
         "@inpageedit/core": "^0.16.1",
+        "javascript-obfuscator": "^5.3.0",
         "npm-run-all2": "^8.0.4",
         "typescript": "^5.7.3"
     }
