feat: 添加 libRequestAnimationFrame 依赖并在多个小工具中实现请求动画帧

--- a/src/gadgets/GiveYouUp/definition.yaml
+++ b/src/gadgets/GiveYouUp/definition.yaml
@@ -28,6 +28,7 @@ peers: []
 dependencies:
   - ext.gadget.libBottomRightCorner
   - ext.gadget.site-lib
+  - ext.gadget.libRequestAnimationFrame
 
 _sites:
   - zh
